nginx/daemonsets.yml
kind: DaemonSet 
apiVersion: apps/v1
metadata:
  name: nginx-daemonsets
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx

        
  template:
    metadata:
      name: nginx-daemon-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-ds-container
        image: nginx:latest
        ports:
        - containerPort: 80
